<resources>
    <string name="app_name">iPlanta</string>
    <string name="text1">Registro de cultivo</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="temperatura_image">Temp</string>
    <string name="humedad_image">Temp</string>
    <string name="temperatura_humedad_image">Temp</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Datos</string>
    <string name="menu_slideshow">Alertas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Temperaturasss</string>
    <string name="fragment_consejos">Consejos</string>
</resources>