<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Estas son las predicciones de temperatura y humedad para tu cultivo de los ultimos 3 meses"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageViewTemperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/temperatura_image"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />

        <ImageView
            android:id="@+id/imageViewHumedad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/humedad_image"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />

        <ImageView
            android:id="@+id/imageViewTemperaturaHumedad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/temperatura_humedad_image"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />
    </LinearLayout>
</ScrollView>
