<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.iot.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.iot.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.iot.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.iot.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/temp_fragment"
        android:name="com.example.iot.temp_fragment"
        android:label="Temperatura"
        tools:layout="@layout/fragment_temp_fragment" />
    <fragment
        android:id="@+id/fragment_consejos"
        android:name="com.example.iot.fragment_consejos"
        android:label="Consejos"
        tools:layout="@layout/fragment_consejos" />
    <fragment
        android:id="@+id/fragment_calendar"
        android:name="com.example.iot.fragment_calendar"
        android:label="Calendario" />
    <fragment
        android:id="@+id/fragment_recordatorios"
        android:name="com.example.iot.fragment_recordatorios"
        android:label="Recordatorios"
        tools:layout="@layout/fragment_recordatorios" />
</navigation>